			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

15-Jan-2005
~~~~~~~~~~~
Bugfix: Panel icons with no label displayed an empty tooltip (Thomas Leonard).
Bugfix: Selecting a pinboard icon only redrew the text path (Thomas Leonard).

13-Jan-2005
~~~~~~~~~~~
Updated Japanese translation (Hiroaki Tanaka).

12-Jan-2005
~~~~~~~~~~~
Slight change to install script for when the installation directory is
on an NFS mount (Stephen Watson).

10-Jan-2005
~~~~~~~~~~~
Can now disable use of extended attributes (Stephen Watson).

08-Jan-2005
~~~~~~~~~~~
Allow renaming multiple files at once. This opens the Bulk Rename window,
which allows manual editing of the names, as well as regular-expression
based transformations (Thomas Leonard).

Rename buttons in Set Run Action box so that they make sense (Thomas Leonard;
reported by Jonatan Liljedahl).

Bugfix: Filer would crash when the screen was resized if there was no
	pinboard (Thomas Leonard).
Bugfix: Xinerama support had broken panel repositioning in response to
	XRANDR screen resizing events (Thomas Leonard).

03-Jan-2005
~~~~~~~~~~~
Set the name for filer windows to 'rox-filer'. This allows theming the fonts
just for ROX-Filer (Lucas Hazel).

23-Dec-2004
~~~~~~~~~~~
If an item has extended attributes, report that before checking whether they
are supported (Thomas Leonard).
Updated Chinese translation (Babyfai Cheung).
Bugfix: Pressing Escape now closes the Properties box (reported by Arnaud
	Calvo).

09-Dec-2004
~~~~~~~~~~~
Bugfix: Test for presence of extended attributes on Solaris gave wrong
        answer when they were not supported (Stephen Watson).

08-Dec-2004
~~~~~~~~~~~
The icons for mount point and symbolic link are now side-by-side, not
one on top of the other, and a new icon is used to mark files with
extended attributes (Stephen Watson).

27-Nov-2004
~~~~~~~~~~~
Bugfix: Use gtk_selection_data_set_text instead of gtk_selection_data_set when