@@ -4,6 +4,8 @@
 
 15-Jan-2005
 ~~~~~~~~~~~
+Bugfix: We were inconsistent about when filenames were escaped. Eg, creating
+	a directory called "a%20b" actually created "a b" (Thomas Leonard).
 Bugfix: Panel icons with no label displayed an empty tooltip (Thomas Leonard).
 Bugfix: Selecting a pinboard icon only redrew the text path (Thomas Leonard).
 
